# improvisers

./: .drone.yml  .gitattributes  README.md  pyproject.toml
docs/: critic.html  explicit.html  game_graph.html  implicit.html  index.html  policy.html  tabular.html
docs/improvisers/: explicit.html  index.html  policy.html  tabular.html
examples/: drone_circ.py
improvisers/: __init__.py  critic.py  explicit.py  game_graph.py  implicit.py  improviser.py  pareto.py  pareto2.py  pareto_critic.py  policy.py  tabular.py  unrolled.py
stubs/: blessings.pyi  numpy.pyi  special.pyi  toposort.pyi
stubs/scipy/: interpolate.pyi  optimize.pyi  spatial.pyi  special.pyi
tests/: test_critic.py  test_game_graph.py  test_improvisers.py  test_pareto.py  test_pareto2.py  test_policy.py
