[tool.poetry]
name = "improvisers"
version = "0.1.0"
description = "Library for modeling controlled improvisers."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
