[tool.poetry]
name = "improvisers"
version = "0.1.0"
description = "Library for modeling improvisers in stochastic games."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^20.3.0"
networkx = "^2.5"
toposort = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flake8 = "^1.0.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
